---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(0)"
---
"_"@(FileId(1), 4..5) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 13..14: invalid character count size
| error in file FileId(1) for 13..14: computed count is 0
| info: valid sizes are between 1 to 32767
